tests/parser/tests/cases/should_fail/double_comma_in_function_call/case.stderr
error: Failed to parse
 --> $DIR/case.hash:1:10
1 |   l := f(a,,);
  |            ^ here
  = note: Expected an expression, however received a `,`.
